# Connectify

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  main.cpp  message.cpp  run.bat  user.cpp  user.h
data/: .gitkeep
src/: main.cpp  searchengine
src/forms/: .gitkeep
src/managers/: .gitkeep  AuthManager.cpp  AuthManager.h  FileManager.cpp  FileManager.h  FriendGraph.cpp  FriendGraph.h  MessageManager.cpp  MessageManager.h  NewsFeed.cpp  NewsFeed.h  NotificationManager.cpp  NotificationManager.h  SearchEngine.cpp  SearchEngine.h
src/models/: .gitkeep  Admin.cpp  Admin.h  Array.h  Comment.h  FollowArray.h  ImagePost.cpp  ImagePost.h  LikeList.h  Message.h  Notification.cpp  Notification.h  Person.cpp  Person.h  Post.cpp  Post.h  PostList.h  TextPost.cpp  TextPost.h  User.cpp  User.h  UserTable.h
src/resources/: style.qss
src/ui/: MainWindow.cpp  MainWindow.h  Session.cpp  Session.h
src/ui/pages/: AdminPage.cpp  AdminPage.h  FeedPage.cpp  FeedPage.h  LoginPage.cpp  LoginPage.h  MessagesPage.cpp  MessagesPage.h  NotifsPage.cpp  NotifsPage.h  ProfilePage.cpp  ProfilePage.h  SearchPage.cpp  SearchPage.h  SignupPage.cpp  SignupPage.h
src/ui/widgets/: ChatBubble.cpp  ChatBubble.h  PostCard.cpp  PostCard.h
src/utils/: .gitkeep
